--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
                     <input id="password" type="password" name="password" placeholder="密码"  />
                 </div>
                 <div class="tableAuto cf">
-                    <a class="autoMatic fl" href="#"><input class="loadGiet" type="checkbox" />自动登录</a>
+                    <a class="autoMatic fl" href="#"><input class="loadGiet" type="checkbox" />记住账号</a>
                     <a class="fr" href="#">忘记密码？</a>
                 </div>
                 <!--<button class="tableBtn">登录</button>-->
