--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -2,71 +2,31 @@
 <html>
 
 <head>
-    <title>Single</title>
+    <title>图书详情</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Suity Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
     <script type="application/x-javascript">
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
         }, false);
-
         function hideURLbar() {
             window.scrollTo(0, 1);
         }
     </script>
     <link href="/laofuzi/css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!-- Custom Theme files -->
     <link href="/laofuzi/css/style.css" rel='stylesheet' type='text/css' />
     <link href="/laofuzi/css/style1.css" rel='stylesheet' type='text/css' />
-    <!-- Custom Theme files -->
-    <!--webfont-->
-    <link href='http://fonts.useso.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/laofuzi/js/jquery-1.11.1.min.js"></script>
-    <script>
-        $(document).ready(function(c) {
-            $('.alert-close').on('click', function(c) {
-                $('.message').fadeOut('slow', function(c) {
-                    $('.message').remove();
-                });
-            });
-        });
-    </script>
-    <script>
-        $(document).ready(function(c) {
-            $('.alert-close1').on('click', function(c) {
-                $('.message1').fadeOut('slow', function(c) {
-                    $('.message1').remove();
-                });
-            });
-        });
-    </script>
-    <script>
-        $(document).ready(function(c) {
-            $('.alert-close2').on('click', function(c) {
-                $('.message2').fadeOut('slow', function(c) {
-                    $('.message2').remove();
-                });
-            });
-        });
-    </script>
-    <!----details-product-slider--->
-    <!-- Include the Etalage files -->
     <link rel="stylesheet" href="/laofuzi/css/etalage.css">
     <script src="/laofuzi/js/jquery.etalage.min.js"></script>
-    <!-- Include the Etalage files -->
     <script>
         jQuery(document).ready(function($) {
-
             $('#etalage').etalage({
                 thumb_image_width: 300,
                 thumb_image_height: 400,
-
                 show_hint: true,
                 click_callback: function(image_anchor, instance_id) {
-                    alert('Callback example:\nYou clicked on an image with the anchor: "' + image_anchor + '"\n(in Etalage instance: "' + instance_id + '")');
+
                 }
             });
             // This is for the dropdown list example:
@@ -76,7 +36,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
         });
     </script>
-    <!----//details-product-slider--->
     <script src="/laofuzi/js/easyResponsiveTabs.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function() {
@@ -90,141 +49,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 
 <body>
-<header>
-    <div class="soubg">
-        <div class="sou fl">
-            <div id="userinfo" class="fl">
+    <header>
+        <div class="soubg">
+            <div class="sou fl">
+                <div id="userinfo" class="fl">
+                </div>
             </div>
-        </div>
-        <div class="fr top_right">
-            <a href="index">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;
-            <a href="order">我的订单</a>&nbsp;&nbsp;|&nbsp;
-            <a class="car_t" href="checkout">&nbsp;&nbsp;购物车 </a>
-            <div class="last">
-                <div class="shop">
-                    <ul id="lfzcart"></ul>
-                    <div class="buy">
-                        <p>合计 <span class="J_totalPrice">￥300.8</span></p>
-                        <a href="#">立即结算 <span class="J_totalCount">(3)</span></a>
+            <div class="fr top_right">
+                <a href="index">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;
+                <a href="order">我的订单</a>&nbsp;&nbsp;|&nbsp;
+                <a class="car_t" href="checkout">&nbsp;&nbsp;购物车 </a>
+                <div class="last">
+                    <div class="shop">
+                        <ul id="lfzcart"></ul>
+                        <div class="buy">
+                            <p>合计 <span class="J_totalPrice">￥300.8</span></p>
+                            <a href="#">立即结算 <span class="J_totalCount">(3)</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="top">
-        <div class="logo">
-            <a href="#"><img src="/laofuzi/images/lfz.png" /></a>
+        <div class="top">
+            <div class="logo">
+                <a href="#"><img src="/laofuzi/images/lfz.png" /></a>
+            </div>
+            <div class="search">
+                <input id="search" type="search" value="" placeholder="请输入关键字" class="s_ipt" />
+                <input id="submit" type="submit" value="搜索" class="s_btn" onclick="search()"/>
+                <div id="popular" class="fl"></div>
+            </div>
         </div>
-        <div class="search">
-            <form>
-                <input type="search" value="" placeholder="请输入关键字" class="s_ipt" />
-                <input type="submit" value="搜索" class="s_btn" />
-            </form>
-            <div id="popular" class="fl"></div>
-        </div>
-    </div>
-</header>
+    </header>
 
     <div class="about_top">
         <div class="container">
             <div class="col-md-3">
-                <ul class="menu1">
-                    <li class="item1"><a href="#" class="">教科书<img class="arrow-img" src="images/arrow.png" alt=""/> </a>
-                        <ul class="cute" style="display: none; overflow: hidden;">
-                            <li class="subitem1"><a href="single.html">编程语言 </a></li>
-                            <li class="subitem2"><a href="single.html">计算机网络</a></li>
-                            <li class="subitem3"><a href="single.html">经济学 </a></li>
-                            <li class="subitem3"><a href="single.html">管理学 </a></li>
-                            <li class="subitem3"><a href="single.html">信息管理与信息系统 </a></li>
-                            <li class="subitem3"><a href="single.html">市场营销</a></li>
-                            <li class="subitem3"><a href="single.html">英语</a></li>
-                        </ul>
-                    </li>
-                    <li class="item1"><a href="#" class="">文艺<img class="arrow-img" src="images/arrow.png" alt=""/> </a>
-                        <ul class="cute" style="display: none; overflow: hidden;">
-                            <li class="subitem1"><a href="single.html">小说 </a></li>
-                            <li class="subitem2"><a href="single.html">传记</a></li>
-                            <li class="subitem3"><a href="single.html">青春文学 </a></li>
-                            <li class="subitem3"><a href="single.html">艺术 </a></li>
-                            <li class="subitem3"><a href="single.html">摄影 </a></li>
-                        </ul>
-                    </li>
-                    <li class="item1"><a href="#" class="">人文社科<img class="arrow-img" src="images/arrow.png" alt=""/> </a>
-                        <ul class="cute" style="display: none; overflow: hidden;">
-                            <li class="subitem1"><a href="single.html"> 文学宗教</a></li>
-                            <li class="subitem2"><a href="single.html">历史</a></li>
-                            <li class="subitem3"><a href="single.html">政治军事 </a></li>
-                            <li class="subitem3"><a href="single.html">社会科学 </a></li>
-                            <li class="subitem3"><a href="single.html">心理学 </a></li>
-                            <li class="subitem3"><a href="single.html">法律</a></li>
-                        </ul>
-                    </li>
-                    <li class="item1"><a href="#" class="">励志<img class="arrow-img" src="images/arrow.png" alt=""/> </a>
-                        <ul class="cute" style="display: none; overflow: hidden;">
-                            <li class="subitem1"><a href="single.html">励志/成功 </a></li>
-                            <li class="subitem2"><a href="single.html">心灵修养</a></li>
-                            <li class="subitem3"><a href="single.html">人生哲学 </a></li>
-                            <li class="subitem3"><a href="single.html">职场 </a></li>
-                            <li class="subitem3"><a href="single.html">人际交往 </a></li>
-                            <li class="subitem3"><a href="single.html">口才/演讲/辩论</a></li>
-                        </ul>
-                    </li>
-                    </li>
-                    <li class="item1"><a href="#" class="">生活<img class="arrow-img" src="images/arrow.png" alt=""/> </a>
-                        <ul class="cute" style="display: none; overflow: hidden;">
-                            <li class="subitem1"><a href="single.html">运动 </a></li>
-                            <li class="subitem2"><a href="single.html">休闲</a></li>
-                            <li class="subitem3"><a href="single.html">旅游 </a></li>
-                            <li class="subitem3"><a href="single.html">美食 </a></li>
-                            <li class="subitem3"><a href="single.html">美妆 </a></li>
-                            <li class="subitem3"><a href="single.html">手工DIY</a></li>
-                        </ul>
-                    </li>
-                    </li>
-                    <li class="item1"><a href="#" class="">科技<img class="arrow-img" src="images/arrow.png" alt=""/> </a>
-                        <ul class="cute" style="display: none; overflow: hidden;">
-                            <li class="subitem1"><a href="single.html">科普读物 </a></li>
-                            <li class="subitem2"><a href="single.html">计算机/网络</a></li>
-                            <li class="subitem3"><a href="single.html">医学 </a></li>
-                            <li class="subitem3"><a href="single.html">建筑 </a></li>
-                            <li class="subitem3"><a href="single.html">工业技术 </a></li>
-                            <li class="subitem3"><a href="single.html">自然科学</a></li>
-                        </ul>
-                    </li>
-                    </li>
-                    <li class="item1"><a href="#" class="">经管<img class="arrow-img" src="images/arrow.png" alt=""/> </a>
-                        <ul class="cute" style="display: none; overflow: hidden;">
-                            <li class="subitem1"><a href="single.html">经济 </a></li>
-                            <li class="subitem2"><a href="single.html">管理</a></li>
-                            <li class="subitem3"><a href="single.html">投资理财 </a></li>
-                            <li class="subitem3"><a href="single.html">股票 </a></li>
-                            <li class="subitem3"><a href="single.html">金融 </a></li>
-                            <li class="subitem3"><a href="single.html">市场/销售</a></li>
-                            <li class="subitem3"><a href="single.html">会计</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <!--initiate accordion-->
-                <script type="text/javascript">
-                    $(function() {
-                        var menu1_ul = $('.menu1> li > ul'),
-                            menu1_a = $('.menu1 > li > a');
-                        menu1_ul.hide();
-                        menu1_a.click(function(e) {
-                            e.preventDefault();
-                            if (!$(this).hasClass('active')) {
-                                menu1_a.removeClass('active');
-                                menu1_ul.filter(':visible').slideUp('normal');
-                                $(this).addClass('active').next().stop(true, true).slideDown('normal');
-                            } else {
-                                $(this).removeClass('active');
-                                $(this).next().stop(true, true).slideUp('normal');
-                            }
-                        });
-
-                    });
-                </script>
+                <ul id="categories" class="menu1 catemenu"></ul>
             </div>
             <div class="col-md-9 content_right">
                 <div class="dreamcrub">
@@ -293,34 +154,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                 </div>
                 <h3 class="like">你可能喜欢</h3>
-                <ul id="flexiselDemo3">
-                    <li><img src="/laofuzi/images/pic3.jpg" class="img-responsive" />
-                        <div class="grid-flex"><a href="#">书名</a>
-                            <p>价格</p>
-                        </div>
-                    </li>
-                    <li><img src="/laofuzi/images/pic4.jpg" class="img-responsive" />
-                        <div class="grid-flex"><a href="#">书名</a>
-                            <p>价格</p>
-                        </div>
-                    </li>
-                    <li><img src="/laofuzi/images/pic5.jpg" class="img-responsive" />
-                        <div class="grid-flex"><a href="#">书名</a>
-                            <p>价格</p>
-                        </div>
-                    </li>
-                    <li><img src="/laofuzi/images/pic3.jpg" class="img-responsive" />
-                        <div class="grid-flex"><a href="#">书名</a>
-                            <p>价格</p>
-                        </div>
-                    </li>
-                    <li><img src="images/pic4.jpg" class="img-responsive" />
-                        <div class="grid-flex"><a href="#">书名</a>
-                            <p>价格</p>
-                        </div>
-                    </li>
-                </ul>
-
+                <ul id="flexiselDemo3" class="likeshow"></ul>
             </div>
             <div class="clearfix"> </div>
         </div>
@@ -351,6 +185,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             "<a href=\"register\" style=\"color:#ff4e00;\">免费注册</a>";
     }
     $("#userinfo").append(infouser);
+    function search() {
+        var keywords = document.getElementById("search").value;
+        // alert(keywords);
+        $.ajax({
+            url: "/laofuzi/book/findByCondition",
+            type: "POST",
+            dataType:"json",
+            contentType : 'application/json',
+            data: JSON.stringify({"name":keywords}),
+            async: false,
+            success: function(result){
+                console.log(result);
+                window.localStorage.setItem('bookid',result[0].id);
+                window.location.href= "single";
+            }
+        });
+    }
     var bookid = window.localStorage.getItem('bookid');
     console.log("bookid:",bookid);
     $.ajax({
@@ -423,6 +274,64 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             for(var j = 0; j < 5; j++){
                 var bookpop = "<a href=\"javascript:click("+result[j].id+");\">"+ result[j].name +"</a>";
                 $("#popular").append(bookpop);
+            }
+            for(var m=0; m < 6; m++){
+                var like="<li class=\"bookdetail\">"+
+                    "<img src='"+ result[m].img +"' class=\"img-responsive\" />\n" +
+                    "<div class=\"grid-flex\"><a href=\"#\">"+ result[m].name +"</a>\n" +
+                    "<p>价格 ￥"+ result[m].unitprice +"</p>\n</div>\n</li>"
+                $("#flexiselDemo3").append(like);
+            }
+        }
+    });
+
+    $(function() {
+        var menu1_ul = $('.menu1> li > ul'),
+            menu1_a = $('.menu1 > li > a');
+        menu1_ul.hide();
+        menu1_a.click(function(e) {
+            e.preventDefault();
+            if (!$(this).hasClass('active')) {
+                menu1_a.removeClass('active');
+                menu1_ul.filter(':visible').slideUp('normal');
+                $(this).addClass('active').next().stop(true, true).slideDown('normal');
+            } else {
+                $(this).removeClass('active');
+                $(this).next().stop(true, true).slideUp('normal');
+            }
+        });
+
+    });
+    $.ajax({
+        url: "/laofuzi/category/findByParentId",
+        type: "POST",
+        dataType:"json",
+        contentType : 'application/json',
+        data: JSON.stringify({"parentId":"0"}),
+        async: false,
+        success: function(result){
+            console.log("categories:",result);
+            for(var i=0 ; i < result.length; i++ ){
+                var categories = "<li class=\"item1\"><a href=\"#\" class=\"\">"+result[i].name+
+                    "<img class=\"arrow-img\" src=\"/laofuzi/images/arrow.png\" alt=\"\"/> </a>\n" +
+                    "<ul id='childcat' class=\"cute\" style=\"display: none; overflow: hidden;\">\n"
+                $.ajax({
+                    url: "/laofuzi/category/findByParentId",
+                    type: "POST",
+                    dataType:"json",
+                    contentType : 'application/json',
+                    data:JSON.stringify({"parentId":result[i].id}),
+                    async: false,
+                    success: function(result){
+                        console.log(result);
+                        for(var j=0 ; j < result.length; j++ ){
+                            categories += "<li class=\"subitem1\">"+
+                                "<a href=\"single.html\">"+result[j].name+"</a></li>\n"
+                        }
+                    }
+                });
+                categories+= "</ul>\n</li>\n";
+                $("#categories").append(categories);
             }
         }
     });
