--- a/src/main/resources/templates/admin/orderdetail.html
+++ b/src/main/resources/templates/admin/orderdetail.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html>
 <head>
     <title>订单详情页</title>
@@ -144,7 +145,6 @@
             if(pair[0] == variable){return pair[1];}
         }
         return(false);
-        console.log(vars);
     }
     $(function () {
         //
