--- a/src/main/resources/templates/admin/orderdetail.html
+++ b/src/main/resources/templates/admin/orderdetail.html
@@ -101,6 +101,20 @@
                         </tr>
                         </thead>
                         <tbody>
+                        <!--&lt;!&ndash; row &ndash;&gt;-->
+                        <!--<tr class="row1">-->
+                        <!--<td>-->
+                        <!--<input type="checkbox" />-->
+                        <!--<img src="img/books/房思琪的初恋乐园.jpg" width=100px; />  -->
+                        <!--</td>-->
+                        <!--<td >-->
+                        <!--房思琪的初恋乐园-->
+                        <!--</td>-->
+                        <!--<td >林奕含</td>			-->
+                        <!--<td>45.00</td>-->
+                        <!--<td>1</td>-->
+                        <!--<td>45.00</td>-->
+                        <!--</tr>-->
 
                         </tbody>
                     </table>
@@ -154,7 +168,7 @@
             contentType: 'application/json',
             url: "http://localhost:8080/laofuzi/order_items/findDetailByOrderId",
             data:JSON.stringify({
-                "orderId":1,
+                "orderId":getQueryVariable("orderid"),
             }),
             success: function (result) {
                 console.log(result);
@@ -163,7 +177,7 @@
                 $('#orderid').append($(s));
                 str='';
                 for (i = 0; i < result.length; i++) {
-                    str += '<tr class="row' + i + '"><td><img  id="bookimg' + i + '" alt="书籍封面" src=" '+ result[i].img +'"/> </td>';
+                    str += '<tr class="row' + i + '"><td><img  id="bookimg' + i + '" alt="书籍封面" src="'+ result[i].img +'"/> </td>';
                     str += '<td><input type="text"  id="bookname' + i + '"value="' + result[i].bookName+ '" style="width:140px" readonly="true"/> </td>';
                     str += '<td><input type="text"  id="author' + i + '" value="作者" style="width:140px" readonly="true"/> </td>';
                     str += '<td><input type="text"  id="unitprice' + i + '"value="' + result[i].unitprice + '" style="width:140px" readonly="true"/> </td>';
@@ -172,7 +186,6 @@
                     str += '</tr>';
 
                 }//循环结束
-                //console.log('str'+str);
                 $('#orderitemstable').append($(str));
                 $('#order_id').text(getQueryVariable("orderid"));
 
